--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_menu.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_menu.scss
@@ -19,7 +19,7 @@
     }
 
     .ag-menu-option-active {
-        background-color: ag-param(row-hover-color);
+        @include ag-css-var-override(background-color, row-hover-color);
     }
 
     .ag-menu-option-disabled {
@@ -89,11 +89,11 @@
     }
 
     .ag-tab-selected {
-        border-bottom-color: ag-param(selected-tab-underline-color);
+        @include ag-css-var-override(border-bottom-color, selected-tab-underline-color);
     }
 
     .ag-menu-header {
-        color: ag-param(secondary-foreground-color);
+        @include ag-css-var-override(color, secondary-foreground-color);
     }
 
     ////////////////////////////////////////
