--- a/community-modules/core/src/styles/ag-theme-base/sass/_ag-theme-base-mixin.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/_ag-theme-base-mixin.scss
@@ -19,6 +19,7 @@
 $ag-compatibility-mode: "variables" !default;
 
 @mixin ag-theme-base($params: ()) {
+    $ag-require-colors-to-have-css-var-override: true !global;
     @include ag-include-theme-once-only();
     $params: ag-process-theme-variables($params, $ag-theme-base-default-params);
 
@@ -26,12 +27,12 @@ $ag-compatibility-mode: "variables" !default;
     @include ag-icons-webfont();
 
     -webkit-font-smoothing: antialiased;
-    color: ag-param(foreground-color);
+    @include ag-css-var-override(color, foreground-color);
     font-family: ag-param(font-family);
     font-size: ag-param(font-size);
     line-height: normal;
     .ag-root-wrapper {
-        background-color: ag-param(background-color);
+        @include ag-css-var-override(background-color, background-color);
     }
 
     @include ag-theme-base-part-reset();
@@ -51,4 +52,5 @@ $ag-compatibility-mode: "variables" !default;
     @if not ag-param(suppress-native-widget-styling) {
         @include ag-native-inputs();
     }
+    $ag-require-colors-to-have-css-var-override: false !global;
 }
