--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_charts.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_charts.scss
@@ -1,7 +1,7 @@
 @mixin ag-theme-base-part-charts {
     .ag-chart-menu {
         border-radius: ag-param(card-radius);
-        background: ag-param(background-color);
+        @include ag-css-var-override(background, background-color);
     }
 
     .ag-chart-menu-icon {
@@ -13,7 +13,7 @@
         margin: 2px 0;
         cursor: pointer;
         border-radius: ag-param(card-radius);
-        color: ag-param(secondary-foreground-color);
+        @include ag-css-var-override(color, secondary-foreground-color);
     }
 
     .ag-chart-menu-icon:hover {
@@ -41,18 +41,18 @@
         }
 
         &.ag-selected {
-            border-color: ag-param(minichart-selected-chart-color);
+            @include ag-css-var-override(border-color, minichart-selected-chart-color);
         }
     }
 
     .ag-chart-settings-card-item {
-        background: ag-param(foreground-color);
+        @include ag-css-var-override(background, foreground-color);
         width: 8px;
         height: 8px;
         border-radius: 4px;
 
         &.ag-selected {
-            background-color: ag-param(minichart-selected-page-color);
+            @include ag-css-var-override(background-color, minichart-selected-page-color);
         }
     }
 
@@ -100,6 +100,6 @@
     .ag-chart-menu-panel {
         @include ag-theme-rtl((border-left: solid 1px ag-param(border-color)));
 
-        background-color: ag-param(control-panel-background-color);
+        @include ag-css-var-override(background-color, control-panel-background-color);
     }
 }
