--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_footer.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_footer.scss
@@ -3,7 +3,7 @@
     
     .ag-paging-panel {
         border-top: 1px solid ag-param(border-color);
-        color: ag-param(secondary-foreground-color);
+        @include ag-css-var-override(color, secondary-foreground-color);
         height: ag-param(header-height);
         // padding: 0 ag-param(cell-horizontal-padding);
 
@@ -27,7 +27,7 @@
     }
 
     .ag-paging-button-wrapper.ag-disabled {
-        color: ag-param(disabled-foreground-color);
+        @include ag-css-var-override(color, disabled-foreground-color);
         cursor: default;
     }
 
@@ -37,14 +37,14 @@
 
     .ag-status-bar {
         @include ag-border(primary, top);
-        color: ag-param(disabled-foreground-color);
+        @include ag-css-var-override(color, disabled-foreground-color);
         padding-right: ag-param(grid-size) * 4;
         padding-left: ag-param(grid-size) * 4;
         line-height: 1.5;
     }
 
     .ag-status-name-value-value {
-        color: ag-param(foreground-color);
+        @include ag-css-var-override(color, foreground-color);
     }
 
     .ag-status-bar-center {
