--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_grid-layout.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_grid-layout.scss
@@ -33,11 +33,11 @@
     }
 
     .ag-value-change-delta-up {
-        color: ag-param(value-change-delta-up-color);
+        @include ag-css-var-override(color, value-change-delta-up-color);
     }
 
     .ag-value-change-delta-down {
-        color: ag-param(value-change-delta-down-color);
+        @include ag-css-var-override(color, value-change-delta-down-color);
     }
 
     .ag-value-change-value {
@@ -49,12 +49,12 @@
     }
 
     .ag-value-change-value-highlight {
-        background-color: ag-param(value-change-value-highlight-background-color);
+        @include ag-css-var-override(background-color, value-change-value-highlight-background-color);
         transition: background-color 0.1s;
     }
 
     .ag-cell-data-changed {
-        background-color: ag-param(value-change-value-highlight-background-color) !important;
+        @include ag-css-var-override(background-color, value-change-value-highlight-background-color, $important: true);
     }
 
     .ag-cell-data-changed-animation {
@@ -63,7 +63,7 @@
     }
 
     .ag-cell-highlight {
-        background-color: ag-param(range-selection-highlight-color) !important;
+        @include ag-css-var-override(background-color, range-selection-highlight-color, $important: true);
     }
 
     .ag-cell-highlight-animation {
@@ -72,8 +72,8 @@
 
     .ag-row {
         height: ag-param(row-height);
-        background-color: ag-param(background-color);
-        color: ag-param(data-color);
+        @include ag-css-var-override(background-color, background-color);
+        @include ag-css-var-override(color, data-color);
         
         @if ag-param(row-border-color) and ag-param(borders-critical) {
             // NOTE: we define border-width and border-color at .ag-row level and only set
@@ -95,7 +95,7 @@
         position: absolute;
         width: calc(100% - 1px);
         height: 1px;
-        background-color: ag-param(range-selection-border-color);
+        @include ag-css-var-override(background-color, range-selection-border-color);
         left: 1px;
     }
 
@@ -113,7 +113,7 @@
 
     @if ag-param(odd-row-background-color) {
         .ag-row-odd {
-            background-color: ag-param(odd-row-background-color);
+            @include ag-css-var-override(background-color, odd-row-background-color);
         }
     }
 
@@ -126,7 +126,7 @@
     }
 
     .ag-row-hover {
-        background-color: ag-param(row-hover-color);
+        @include ag-css-var-override(background-color, row-hover-color);
     }
 
     .ag-numeric-cell {
@@ -166,12 +166,12 @@
         @include ag-card();
         padding: 0;
         height: ag-param(row-height);
-        background-color: ag-param(control-panel-background-color);
+        @include ag-css-var-override(background-color, control-panel-background-color);
     }
 
     .ag-popup-editor {
         @include ag-card();
-        background-color: ag-param(control-panel-background-color);
+        @include ag-css-var-override(background-color, control-panel-background-color);
         padding: 0;
     }
 
@@ -182,7 +182,7 @@
 
     .ag-details-row {
         padding: ag-param(grid-size) * 5;
-        background-color: ag-param(background-color);
+        @include ag-css-var-override(background-color, background-color);
     }
 
     .ag-overlay-loading-wrapper {
