--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_sidebar.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_sidebar.scss
@@ -6,14 +6,14 @@
     }
 
     .ag-tool-panel-wrapper {
-        background-color: ag-param(control-panel-background-color);
+        @include ag-css-var-override(background-color, control-panel-background-color);
     }
 
     .ag-side-buttons {
         padding-top: ag-param(grid-size) * 4;
         width: ag-param(icon-size) + 4;
         position: relative;
-        color: ag-param(foreground-color);
+        @include ag-css-var-override(color, foreground-color);
         overflow: hidden;
     }
 
@@ -42,9 +42,9 @@
 
     .ag-selected .ag-side-button-button {
         @if ag-param(borders-side-button) {
-            background-color: ag-param(control-panel-background-color);
-            border-top-color: ag-param(border-color);
-            border-bottom-color: ag-param(border-color);
+            @include ag-css-var-override(background-color, control-panel-background-color);
+            @include ag-css-var-override(border-top-color, border-color);
+            @include ag-css-var-override(border-bottom-color, border-color);
         }
     }
 
@@ -74,7 +74,7 @@
         }
 
         .ag-selected .ag-side-button-button {
-            border-right-color: ag-param(selected-tab-underline-color);
+            @include ag-css-var-override(border-right-color, selected-tab-underline-color);
         }
     }
 
@@ -101,7 +101,7 @@
         }
 
         .ag-selected .ag-side-button-button {
-            border-left-color: ag-param(selected-tab-underline-color);
+            @include ag-css-var-override(border-left-color, selected-tab-underline-color);
         }
     }
     
