--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_widgets.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_widgets.scss
@@ -25,12 +25,12 @@
 
     input[class^='ag-'] {
         margin: 0;
-        background-color: ag-param(background-color);
+        @include ag-css-var-override(background-color, background-color);
     }
 
     textarea[class^='ag-'],
     select[class^='ag-'] {
-        background-color: ag-param(background-color);
+        @include ag-css-var-override(background-color, background-color);
     }
 
     input[class^='ag-']:not([type]),
@@ -49,13 +49,13 @@
         @if ag-param(input-border-color) {
             border-width: 1px;
             border-style: solid;
-            border-color: ag-param(input-border-color);
+            @include ag-css-var-override(border-color, input-border-color);
         }
     
         &:disabled {
-            color: ag-param(disabled-foreground-color);
+            @include ag-css-var-override(color, disabled-foreground-color);
             @if ag-param(input-disabled-background-color) {
-                background-color: ag-param(input-disabled-background-color);
+                @include ag-css-var-override(background-color, input-disabled-background-color);
             }
             @if ag-param(input-border-color) {
                 border-color: rgba(ag-param(input-border-color), 0.3);
@@ -65,7 +65,7 @@
         &:focus {
             outline: none;
             box-shadow: ag-param(input-focus-box-shadow);
-            border-color: ag-param(input-focus-border-color);
+            @include ag-css-var-override(border-color, input-focus-border-color);
         }
     }
 
@@ -89,7 +89,7 @@
     }
 
     .ag-drag-handle {
-        color: ag-param(secondary-foreground-color);
+        @include ag-css-var-override(color, secondary-foreground-color);
     }
 
     ////////////////////////////////////////
@@ -100,7 +100,7 @@
     }
 
     .ag-select-list {
-        background-color: ag-param(background-color);
+        @include ag-css-var-override(background-color, background-color);
         overflow-y: auto;
         overflow-x: hidden;
     }
@@ -109,7 +109,7 @@
         display: flex;
         align-items: center;
         &.ag-active-item {
-            background-color: ag-param(row-hover-color);
+            @include ag-css-var-override(background-color, row-hover-color);
         }
     }
 
@@ -127,7 +127,7 @@
 
     .ag-select {
         .ag-picker-field-wrapper {
-            background-color: ag-param(background-color);
+            @include ag-css-var-override(background-color, background-color);
             min-height: ag-param(list-item-height);
             height: ag-param(list-item-height);
             cursor: default;
@@ -151,7 +151,7 @@
     // Rich Select
     ////////////////////////////////////////
     .ag-rich-select {
-        background-color: ag-param(control-panel-background-color);
+        @include ag-css-var-override(background-color, control-panel-background-color);
     }
 
     .ag-rich-select-list {
@@ -172,7 +172,7 @@
         height: ag-param(list-item-height);
 
         &:hover {
-            background-color: ag-param(row-hover-color);
+            @include ag-css-var-override(background-color, row-hover-color);
         }
     }
 
@@ -181,7 +181,7 @@
     }
 
     .ag-rich-select-row-selected {
-        background-color: ag-param(selected-row-background-color);
+        @include ag-css-var-override(background-color, selected-row-background-color);
     }
 
     ////////////////////////////////////////
@@ -195,7 +195,7 @@
     .ag-group-contracted {
         @include ag-theme-rtl(( margin-right: ag-param(cell-widget-spacing) ));
 
-        color: ag-param(secondary-foreground-color);
+        @include ag-css-var-override(color, secondary-foreground-color);
     }
 
     .ag-cell-wrapper > *:not(.ag-cell-value):not(.ag-group-value) {
@@ -212,7 +212,7 @@
     
     .ag-group-title-bar-icon {
         cursor: pointer;
-        color: ag-param(secondary-foreground-color);
+        @include ag-css-var-override(color, secondary-foreground-color);
     }
     
     .ag-group-child-count {
@@ -220,7 +220,7 @@
     }
 
     .ag-group-title-bar {
-        background-color: ag-param(subheader-background-color);
+        @include ag-css-var-override(background-color, subheader-background-color);
         padding: ag-param(grid-size);
     }
     
@@ -255,7 +255,7 @@
         height: 24px;
         border-radius: 12px;
         box-shadow: 0 0 2px ag-param(foreground-color);
-        background-color: ag-param(background-color);
+        @include ag-css-var-override(background-color, background-color);
     }
     .ag-angle-select-child-circle {
         top: 4px;
@@ -265,7 +265,7 @@
         margin-left: -3px;
         margin-top: -4px;
         border-radius: 3px;
-        background-color: ag-param(secondary-foreground-color);
+        @include ag-css-var-override(background-color, secondary-foreground-color);
     }
 
     .ag-picker-field-wrapper {
@@ -277,8 +277,8 @@
     }
     
     .ag-picker-field-button {
-        background-color: ag-param(background-color);
-        color: ag-param(secondary-foreground-color);
+        @include ag-css-var-override(background-color, background-color);
+        @include ag-css-var-override(color, secondary-foreground-color);
     }
 
     .ag-dialog.ag-color-dialog {
@@ -375,12 +375,12 @@
     }
 
     .ag-panel {
-        background-color: ag-param(background-color);
+        @include ag-css-var-override(background-color, background-color);
     }
 
     .ag-panel-title-bar {
-        background-color: ag-param(header-background-color);
-        color: ag-param(header-foreground-color);
+        @include ag-css-var-override(background-color, header-background-color);
+        @include ag-css-var-override(color, header-foreground-color);
         height: ag-param(header-height);
         padding: ag-param(grid-size) ag-param(cell-horizontal-padding);
         @include ag-border(primary, bottom);
@@ -394,8 +394,8 @@
     // Tooltip
     ////////////////////////////////////////
     .ag-tooltip {
-        background-color: ag-param(header-background-color);
-        color: ag-param(foreground-color);
+        @include ag-css-var-override(background-color, header-background-color);
+        @include ag-css-var-override(color, foreground-color);
         padding: ag-param(grid-size);
         @include ag-border(primary);
         border-radius: ag-param(card-radius);
@@ -440,7 +440,7 @@
 
     .ag-column-select-column-readonly,
     .ag-column-select-column-group-readonly {
-        color: ag-param(disabled-foreground-color);
+        @include ag-css-var-override(color, disabled-foreground-color);
         pointer-events: none;
     }
 
@@ -499,7 +499,7 @@
         height: 100%;
     }
 
-    background-color: ag-param(checkbox-background-color);
+    @include ag-css-var-override(background-color, checkbox-background-color);
     border-radius: ag-param(checkbox-border-radius);
     display: inline-block;
     vertical-align: middle;
@@ -525,7 +525,7 @@
 
     &::after {
         content: ag-icon-char(checkbox-unchecked);
-        color: ag-param(checkbox-unchecked-color);
+        @include ag-css-var-override(color, checkbox-unchecked-color);
         position: absolute;
         top: 0;
         left: 0;
@@ -534,7 +534,7 @@
 
     &.ag-checked::after {
         content: ag-icon-char(checkbox-checked);
-        color: ag-param(checkbox-checked-color);
+        @include ag-css-var-override(color, checkbox-checked-color);
         position: absolute;
         top: 0;
         left: 0;
@@ -543,7 +543,7 @@
 
     &.ag-indeterminate::after {
         content: ag-icon-char(checkbox-indeterminate);
-        color: ag-param(checkbox-indeterminate-color);
+        @include ag-css-var-override(color, checkbox-indeterminate-color);
         position: absolute;
         top: 0;
         left: 0;
@@ -558,7 +558,7 @@
 
     &::after {
         content: ag-icon-char(radio-button-off);
-        color: ag-param(checkbox-unchecked-color);
+        @include ag-css-var-override(color, checkbox-unchecked-color);
         position: absolute;
         top: 0;
         left: 0;
@@ -567,7 +567,7 @@
 
     &.ag-checked::after {
         content: ag-icon-char(radio-button-on);
-        color: ag-param(checkbox-checked-color);
+        @include ag-css-var-override(color, checkbox-checked-color);
         position: absolute;
         top: 0;
         left: 0;
@@ -580,7 +580,7 @@
     box-sizing: border-box;
     width: ag-param(toggle-button-width);
     height: ag-param(toggle-button-height);
-    background-color: ag-param(toggle-button-off-background-color);
+    @include ag-css-var-override(background-color, toggle-button-off-background-color);
     border-radius: ag-param(toggle-button-height) / 2;
     position: relative;
     flex: none;
@@ -602,8 +602,8 @@
     }
 
     &.ag-checked {
-        background-color: ag-param(toggle-button-on-background-color);
-        border-color: ag-param(toggle-button-on-border-color);
+        @include ag-css-var-override(background-color, toggle-button-on-background-color);
+        @include ag-css-var-override(border-color, toggle-button-on-border-color);
     }
 
     &::before {
@@ -615,7 +615,7 @@
         box-sizing: border-box;
         height: ag-param(toggle-button-height);
         width: ag-param(toggle-button-height);
-        background-color: ag-param(toggle-button-switch-background-color);
+        @include ag-css-var-override(background-color, toggle-button-switch-background-color);
         border-radius: ag-param(toggle-button-height) / 2;
         transition: left 100ms;
         border: $border-width solid ag-param(toggle-button-switch-border-color);
@@ -623,7 +623,7 @@
 
     &.ag-checked::before {
         left: calc(100% - #{ag-param(toggle-button-height)} );
-        border-color: ag-param(toggle-button-on-border-color);
+        @include ag-css-var-override(border-color, toggle-button-on-border-color);
     }
 }
 
@@ -636,7 +636,7 @@
         padding: 0;
         width: 100%;
         height: 3px;
-        background-color: ag-param(border-color);
+        @include ag-css-var-override(background-color, border-color);
         border-radius: ag-param(border-radius);
         border-radius: ag-param(checkbox-border-radius);
     }
@@ -669,7 +669,7 @@
         -webkit-appearance: none;
         width: ag-param(icon-size);
         height: ag-param(icon-size);
-        background: ag-param(background-color);
+        @include ag-css-var-override(background, background-color);
         border: 1px solid ag-param(checkbox-unchecked-color);
         border-radius: ag-param(icon-size);
     }
@@ -681,7 +681,7 @@
         @include ag-focus-range-thumb
     }
     @else {
-        border-color: ag-param(checkbox-checked-color);
+        @include ag-css-var-override(border-color, checkbox-checked-color);
     }
 }
 
