--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_grid-layout.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_grid-layout.scss
@@ -79,7 +79,8 @@
             // NOTE: we define border-width and border-color at .ag-row level and only set
             // border-style inside nested pseudoclass selectors, to allow derived themes
             // to override border-width on .ag-row
-            border: none 1px ag-param(row-border-color);
+            border-width: 1px;
+            @include ag-css-var-override(border-color, row-border-color);
 
             &:not(.ag-row-first) {
                 border-top-style: solid;
