--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_sidebar.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_sidebar.scss
@@ -33,7 +33,9 @@
         background-repeat: no-repeat;
 
         border: none;
-        @include ag-border(side-button, (top, bottom), $color: transparent);
+        @include ag-border(side-button, (top, bottom));
+        $border-top-color: transparent;
+        $border-bottom-color: transparent;
 
         &:focus {
             box-shadow: none;
