--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_column-drop.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_column-drop.scss
@@ -42,7 +42,7 @@
     
     .ag-column-drop-horizontal-half-width:not(:last-child) {
         @if ag-param(borders) {
-            @include ag-theme-rtl((border-right: solid 1px ag-param(border-color)));
+            @include ag-theme-rtl((border-right: solid 1px), $color-param: border-color);
         }
     }
 
