--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_charts.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_charts.scss
@@ -21,7 +21,8 @@
     }
 
     .ag-chart-mini-thumbnail {
-        border: 1px solid ag-param(secondary-border-color);
+        border: 1px solid;
+        @include ag-css-var-override(border-color, secondary-border-color);
         border-radius: 5px;
         margin: 5px;
 
@@ -98,7 +99,7 @@
     }
 
     .ag-chart-menu-panel {
-        @include ag-theme-rtl((border-left: solid 1px ag-param(border-color)));
+        @include ag-theme-rtl((border-left: solid 1px), $color-param: border-color);
 
         @include ag-css-var-override(background-color, control-panel-background-color);
     }
