--- a/community-modules/core/src/styles/ag-theme-base/sass/parts/_grid-borders.scss
+++ b/community-modules/core/src/styles/ag-theme-base/sass/parts/_grid-borders.scss
@@ -66,29 +66,32 @@
         .ag-has-focus .ag-cell-focus:not(.ag-cell-range-selected),
         .ag-has-focus .ag-cell-focus.ag-cell-range-single-cell,
         .ag-cell-range-single-cell.ag-cell-range-handle {
-            border: 1px solid ag-param(range-selection-border-color);
+            border: 1px solid;
+            @include ag-css-var-override(border-color, range-selection-border-color);
             outline: initial;
         }
     }
 
     .ag-cell.ag-selection-fill-top,
     .ag-cell.ag-selection-fill-top.ag-cell-range-selected {
-        border-top: 1px dashed ag-param(range-selection-border-color);
+        border-top: 1px dashed;
+        @include ag-css-var-override(border-top-color, range-selection-border-color);
     }
 
     .ag-cell.ag-selection-fill-right,
     .ag-cell.ag-selection-fill-right.ag-cell-range-selected {
-        @include ag-theme-rtl((border-right: 1px dashed ag-param(range-selection-border-color)));
+        @include ag-theme-rtl((border-right: 1px dashed), $color-param: range-selection-border-color);
     }
 
     .ag-cell.ag-selection-fill-bottom,
     .ag-cell.ag-selection-fill-bottom.ag-cell-range-selected {
-        border-bottom: 1px dashed ag-param(range-selection-border-color);
+        border-bottom: 1px dashed;
+        @include ag-css-var-override(border-bottom-color, range-selection-border-color);
     }
 
     .ag-cell.ag-selection-fill-left,
     .ag-cell.ag-selection-fill-left.ag-cell-range-selected {
-        @include ag-theme-rtl((border-left: 1px dashed ag-param(range-selection-border-color)));
+        @include ag-theme-rtl((border-left: 1px dashed), $color-param: range-selection-border-color);
     }
 
     %ag-selection-handle {
