--- a/community-modules/core/src/styles/mixins/_ag-theme-params.scss
+++ b/community-modules/core/src/styles/mixins/_ag-theme-params.scss
@@ -70,7 +70,7 @@ $ag-require-colors-to-have-css-var-override: false !global;
 @function ag-param($name) {
     @if $ag-require-colors-to-have-css-var-override and str-index($name, "-color") and not $-ag-is-inside-ag-color-param {
         // uncomment during development to catch use of 
-        // @error "Illegal call to ag-param(#{$name}) - all colour params must be accessed through the ag-color-param mixin.";
+        @error "Illegal call to ag-param(#{$name}) - all colour params must be accessed through the ag-color-param mixin.";
     }
     $resolved: ag-param-unchecked($name);
     @if str-index(inspect($resolved), "ag-derived(") != null {
@@ -99,6 +99,7 @@ $ag-require-colors-to-have-css-var-override: false !global;
     }
     $-is-inside-ag-color-param: false !global;
 }
+
 
 // Like ag-param, but allow map values
 @function ag-param-unchecked($name) {
